# myjlab2021-2nd-final-work

./: .env.example  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  start.sh
app/: config.py  data.csv  main.py
star_face_similarity/: __init__.py  main.py  utils.py
tests/: test_sfs_class.py
